--- a/src/main/resources/META-INF/resources/post-current-egg-count.html
+++ b/src/main/resources/META-INF/resources/post-current-egg-count.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Report today's egg count</title>
+    <script src="webcomponents/webcomponents-loader.js"></script>
+    <script>
+        if (!window.customElements) { document.write('<!--'); }
+    </script>
+    <script src="webcomponents/custom-elements-es5-adapter.js"></script>
+    <!-- ! DO NOT REMOVE THIS COMMENT, WE NEED ITS CLOSING MARKER -->
 </head>
 <body>
 
