Place ui controls in single column.

--- a/src/main/webapp/post-current-egg-count.html
+++ b/src/main/webapp/post-current-egg-count.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Report today's egg count</title>
+    <link rel="stylesheet" type="text/css" href="current-egg-count.css">
     <script src="webcomponents/webcomponents-loader.js"></script>
     <script>
         if (!window.customElements) { document.write('<!--'); }
