Show a simple message in case save fails.
Note method to provide dynamic text to notification.

--- a/src/main/webapp/post-current-egg-count.html
+++ b/src/main/webapp/post-current-egg-count.html
@@ -18,6 +18,8 @@
                            clear-button-visible prevent-invalid-input required
                            placeholder="0" pattern="^[0-9]+$"></vaadin-text-field>
         <vaadin-button id="post" disabled="true">Spara</vaadin-button>
+        <vaadin-notification duration="5000">
+        </vaadin-notification>
     </div>
   </body>
 </html>
