Show info about todays current egg count.

--- a/src/main/webapp/post-current-egg-count.html
+++ b/src/main/webapp/post-current-egg-count.html
@@ -13,6 +13,7 @@
     <!-- ! DO NOT REMOVE THIS COMMENT, WE NEED ITS CLOSING MARKER -->
   </head>
   <body>
+    <div class="info-banner" id="current-egg-count"></div>
     <div class="form">
         <vaadin-text-field label="Skriv hur många ägg du fick idag" id="eggs"
                            clear-button-visible prevent-invalid-input required
