--- a/src/main/webapp/statistics.html
+++ b/src/main/webapp/statistics.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <title>Egg Statistics</title>
     <link rel="stylesheet" type="text/css" href="statistics.css">
+    <script src="webcomponents/webcomponents-loader.js"></script>
+    <script>
+        if (!window.customElements) { document.write('<!--'); }
+    </script>
+    <script src="webcomponents/custom-elements-es5-adapter.js"></script>
+    <!-- ! DO NOT REMOVE THIS COMMENT, WE NEED ITS CLOSING MARKER -->
 </head>
 <body>
     <h1>Egg statistics</h1>
     <canvas id="egg-chart" width="1600" height="900"></canvas>
+    <div class=controls>
+        <vaadin-text-field label="Från" id="startdate"
+                            prevent-invalid-input required
+                           placeholder="2019-01-01"></vaadin-text-field>
+        <vaadin-text-field label="Till" id="enddate" 
+                            prevent-invalid-input required
+                            placeholder="2019-12-31"></vaadin-text-field>
+    </div>
 </body>
 </html>
