Display the mean value of the selected interval.

--- a/src/main/webapp/statistics.html
+++ b/src/main/webapp/statistics.html
@@ -21,6 +21,10 @@
         <vaadin-text-field label="Till" id="enddate" 
                             prevent-invalid-input required
                             placeholder="2019-12-31"></vaadin-text-field>
+         <div class="info">
+             <p id="label">Medelvärde:</p>
+             <p id="mean"></p>
+         </div>                   
     </div>
 </body>
 </html>
