--- a/src/main/webapp/statistics.html
+++ b/src/main/webapp/statistics.html
@@ -17,10 +17,10 @@
     <div class=controls>
         <vaadin-text-field label="Från" id="startdate"
                             prevent-invalid-input required
-                           placeholder="2019-01-01"></vaadin-text-field>
+                            placeholder="ÅÅÅÅ-MM-DD"></vaadin-text-field>
         <vaadin-text-field label="Till" id="enddate" 
                             prevent-invalid-input required
-                            placeholder="2019-12-31"></vaadin-text-field>
+                            placeholder="ÅÅÅÅ-MM-DD"></vaadin-text-field>
          <div class="info">
              <p id="label">Medelvärde:</p>
              <p id="mean"></p>
