--- a/src/main/webapp/statistics.html
+++ b/src/main/webapp/statistics.html
@@ -21,10 +21,15 @@
         <vaadin-text-field label="Till" id="enddate" 
                             prevent-invalid-input required
                             placeholder="ÅÅÅÅ-MM-DD"></vaadin-text-field>
+         
          <div class="info">
-             <p id="label">Medelvärde:</p>
-             <p id="mean"></p>
-         </div>                   
+            <p id="label">Totalt antal ägg:</p>
+            <p id="sum"></p>
+        </div>
+        <div class="info">
+            <p id="label">Medelvärde:</p>
+            <p id="mean"></p>
+        </div>
     </div>
 </body>
 </html>
